# CUDAdemo

./: CMakeLists.txt  README.md  main.cu
000_Common/: MyUtils.h
001_HelloWorld/: CMakeLists.txt
002_OpenmpDemo/: CMakeLists.txt  main.cpp
010_SumArrays/: CMakeLists.txt  SumArrays.cu
01_SumArrays/: SumArrays.cu
Common/: MathUtils.cpp
src/: MathUtils.cpp  MathUtils.h
